--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -7,7 +7,7 @@
 
 <div class="topping">
     <img src="pictures/pattern.jpeg" alt="pattern">
-    <div class="centered"><h1>Dasmoto's Arts & Crafts</h1></div>
+    <div class="centered"><h1>Dasmoto's Arts & Craft</h1></div>
   </div>
 
 <body>
