--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="proj_css.css">
 </head>
 
-<div class="topping">
-    <img src="pictures/pattern.jpeg" alt="pattern">
-    <div class="centered"><h1>Dasmoto's Arts & Craft</h1></div>
-  </div>
+<div class="topping_img">
+    <h1 class='header'>Dasmoto's Arts & Craft</h1>
+</div>
 
 <body>
-    <h1></h1>
+   
 </body>
 </html>
