--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <div class="brushes">
-        <h2>Brushes</h2>
+        <h6>Brushes</h6>
+        <img src="pictures/hacksaw.jpeg" alt="hacksaw img">
 
     </div>
 
 
 </body>
-</html>
+</html
+
