--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <title> </title>
+    <title></title>
     <link rel="stylesheet" href="proj_css.css">
+
+    <div class="topping_img">
+        <h1 class='header'>Dasmoto's Arts & Craft</h1>
+    </div>
+
 </head>
 
-<div class="topping_img">
-    <h1 class='header'>Dasmoto's Arts & Craft</h1>
-</div>
+
 
 <body>
-   
+    <br>
+
+    <div class="brushes"> Brushes </div>
+
+    <p></p>
+
+    <div>
+        <img src="pictures/hacksaw.jpeg" alt="hacksaw brushes">
+        <p style="font-weight: bold; font-family: helvetica;">Hacksaw Brushes</p>
+        <p class="hacksaw_par"> Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span> </p>
+    </div>
+
+    <div class="frames"> Frames </div>
+
+    <br>
+
+    <div>
+        <img src="pictures/frames.jpeg" alt="art frames">
+        <p style="font-weight: bold; font-family: helvetica;">Art Frames (assorted)</p>
+        <p class="hacksaw_par"> Assorted frames made of different materials, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span> </p>
+    </div>
+
+    <div class="paint"> Paint </div>
+
+    <br>
+
+    <div>
+        <img src="pictures/finnish.jpeg" alt="finnish paint">
+        <p style="font-weight: bold; font-family: helvetica;">Clean Finnish Paint</p>
+        <p class="hacksaw_par"> Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="price">Starting at $5.00 / tube.</span> </p>
+    </div>
+
+
+
 </body>
 </html>
