--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <title></title>
+    <title>Dasmoto's Arts and Crafts</title>
     <link rel="stylesheet" href="proj_css.css">
 
     <div class="topping_img">
