--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -15,7 +15,7 @@
 <body>
     <br>
 
-    <div class="brushes"> Brushes </div>
+    <h2 class="brushes"> Brushes </h2>
 
     <p></p>
 
@@ -25,7 +25,7 @@
         <p class="hacksaw_par"> Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span> </p>
     </div>
 
-    <div class="frames"> Frames </div>
+    <h2 class="frames"> Frames </h2>
 
     <br>
 
@@ -35,7 +35,7 @@
         <p class="hacksaw_par"> Assorted frames made of different materials, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00 / frame.</span> </p>
     </div>
 
-    <div class="paint"> Paint </div>
+    <h2 class="paint"> Paint </h2>
 
     <br>
 
